--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="card-back">
                 Although I had been traveling all night, I was still energetic when I arrived at the conference.
             </div>
-        </div>
+        </div> 
     </div>
      <div class="card">
         <div class="card-inner">
@@ -27,18 +27,6 @@
             </div>
             <div class="card-back">
                 Having been deeply involved in research for several months, he finally published his findings.
-            </div>
-        </div>
-    </div>
-     <div class="card">
-        <div class="card-inner">
-            <div class="card-front">
-                energetic
-            </div>
-            <div class="card-back">
-                Coffee makes me more energetic.
-                <br>The kids are energetic and playful.
-                <br>I need to be energetic at work.
             </div>
         </div>
     </div>
@@ -72,5 +60,12 @@
             </div>
         </div>
     </div>
+    <div class="card">
+        <div class="card-inner">
+            <div class="card-front">energetic</div>
+            <div class="card-back">энергичный</div>
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
